# asciinem

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: asan.yml  build.yml  lsan.yml  msan.yml  sanitizers.yml  tidy.yml  tsan.yml  ubsan.yml  verify.yml
cmake/: client_lib.cmake  compiler_warnings.cmake  conan.cmake  server_lib.cmake  static_analyzers.cmake
include/client/: util.hpp
include/client/controller/: game_controller.hpp  user_input.hpp
include/client/network/: asio_network_module.hpp  types.hpp
include/client/network/interfaces/: network_module.hpp
include/client/view/: game_view.hpp  game_window.hpp  main_window.hpp  ncurses_main_window.hpp  ncurses_window.hpp  notice_window.hpp  notify_view.hpp  stats_view.hpp  stats_window.hpp  util.hpp  window.hpp
include/client/view/consoles/: macos_ncurses.hpp  ncurses.hpp
include/client/view/interfaces/: console_window.hpp  widget.hpp  window.hpp
include/server/: network_service_mediator.hpp  serializer.hpp  util.hpp
include/server/db/: database.hpp  query_result_type.hpp  sqlite_connection.hpp  types.hpp
include/server/db/mappers/: backpack_mapper.hpp  item_mapper.hpp  player_mapper.hpp
include/server/domain/: armor.hpp  collision_checker.hpp  entity.hpp  fight_manager.hpp  game_manager.hpp  game_state.hpp  health_potion.hpp  item.hpp  location.hpp  monster.hpp  player.hpp  weapon.hpp
include/server/domain/strategies/: move_strategy.hpp  random_move_strategy.hpp  still_strategy.hpp
include/server/domain/util/: money.hpp
include/server/network/: asio_connection.hpp  asio_factory.hpp  asio_listener.hpp  asio_manager.hpp  asio_network.hpp  asio_server.hpp  asio_tcp_server.hpp  clock.hpp  clock_observer.hpp  id_pool.hpp  message_queue.hpp  server_config.hpp  types.hpp
include/server/network/interfaces/: client_connection.hpp  connection_manager.hpp  listener.hpp  network_factory.hpp  network_manager.hpp  network_module.hpp  observer.hpp  queue.hpp  subject.hpp
include/server/service/: game_service.hpp  request.hpp  request_serializer.hpp
locations/: map1.txt  map1_collisions.txt  test_collisions.txt  test_map.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  util.cpp
src/client/network/: asio_network_module.cpp
src/client/view/: game_view.cpp  notify_view.cpp  stats_view.cpp  window.cpp
src/client/view/consoles/: ncurses.cpp
src/server/: CMakeLists.txt  main.cpp  network_service_mediator.cpp  util.cpp
src/server/db/: query_result_type.cpp  sqlite_connection.cpp
src/server/domain/: armor.cpp  collision_checker.cpp  entity.cpp  fight_manager.cpp  game_manager.cpp  game_state.cpp  health_potion.cpp  item.cpp  location.cpp  monster.cpp  player.cpp  weapon.cpp
src/server/domain/strategies/: random_move_strategy.cpp  still_strategy.cpp
src/server/domain/util/: money.cpp
src/server/network/: asio_connection.cpp  asio_listener.cpp  asio_manager.cpp  asio_server.cpp  asio_tcp_server.cpp  message_queue.cpp
src/server/service/: game_service.cpp  request_serializer.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/client/: tests.cpp
test/server/: clock_tests.cpp
test/server/db/: sqlite_tests.cpp
test/server/db/mappers/: backpack_mapper_test.cpp  item_mapper_test.cpp  player_mapper_test.cpp
test/server/domain/: collision_checker_tests.cpp  location_tests.cpp  monster_tests.cpp  player_tests.cpp
test/server/network/: clock_tests.cpp  connection_manager_tests.cpp  listener_tests.cpp  queue_tests.cpp
test/server/network/mocks/: client_connection_mock.hpp  clock_mock.hpp  connection_manager_mock.hpp  queue_mock.hpp
